<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header" app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="nightMode"
            app:title="@string/basic_setting1"
            app:iconSpaceReserved="false" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/difficulty"
            app:entryValues="@array/difficultyValues"
            app:key="difficulty"
            app:title="@string/basic_setting2"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="#009688"
            app:entries="@array/color"
            app:entryValues="@array/colorValues"
            app:key="color"
            app:title="@string/basic_setting3"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="2"
            app:entries="@array/size"
            app:entryValues="@array/sizeValues"
            app:key="size"
            app:title="Size"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>